# refkit-ostree-upgrade

./: Makefile.am  README.md  bootstrap  configure.ac  ostree-update.service  ostree-upgrade.sh  refkit-ostree
hooks/: run-hooks
hooks/post-apply.d/: 00-update-uefi-app  99-reboot
scripts/: refkit-ostree  swallow.sh
services/: ostree-patch-proc-cmdline.service  ostree-post-update-failure.service  ostree-post-update-reboot.service  ostree-post-update.service  ostree-update.service  refkit-update-post-check.service
src/: refkit-ostree-update.c  refkit-ostree.c
