bin_SCRIPTS  = scripts/refkit-ostree
servicedir   = ${systemd_unitdir}/system
service_DATA = \
	services/ostree-patch-proc-cmdline.service \
        services/ostree-update.service \
        services/ostree-post-update.service \
        services/ostree-post-update-failure.service \
        services/ostree-post-update-failure.target
